--- a/alan2.css
+++ b/alan2.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic);
 
 html,
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 body {
   width: 100%;
   height: 100%;
