--- a/alan2.css
+++ b/alan2.css
@@ -190,3 +190,34 @@ a{
 @keyframes blinker {
   50% { opacity: 0; }
 }
+
+/* Tulisan */
+.typewriter {
+  border-right: solid 3px rgba(0,255,0,.75);
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  font-size: 1.4em;
+  color: rgba(255,255,255,.70);
+  margin: 0 auto;
+}
+
+/* Animation */
+.typewriter {
+  animation: animated-text 6s steps(29,end) 1s 1 normal both,
+             animated-cursor 600ms steps(29,end) infinite;
+}
+
+/* text animation */
+
+@keyframes animated-text{
+  from{width: 0;}
+  to{width: 472px;}
+}
+
+/* cursor animations */
+
+@keyframes animated-cursor{
+  from{border-right-color: rgba(0,255,0,.75);}
+  to{border-right-color: transparent;}
+}
