--- a/alan2.css
+++ b/alan2.css
@@ -14,6 +14,7 @@ body {
 
 #cake {
   display: block;
+  justify-content: center;
   position: relative;
   margin: -10em auto 0 auto;
 }
@@ -171,28 +172,9 @@ audio{
   }
 }
 
-.text {
-  color: #fff;
-  font-family: 'Lato', sans-serif;
-  font-weight: 300;
-  font-style:italic;
-  text-align: center;
-  h1{  font-size: 1.4em;}
-  }
-
-a{
-    outline:none;
-   text-decoration:none;
-   color:#ffd;
-   animation: blinker 1.4s linear infinite;
-}
-
-@keyframes blinker {
-  50% { opacity: 0; }
-}
 
 /* Tulisan */
-.typewriter {
+.tulisan1 {
   border-right: solid 3px rgba(0,255,0,.75);
   white-space: nowrap;
   overflow: hidden;
@@ -200,10 +182,11 @@ a{
   font-size: 1.4em;
   color: rgba(255,255,255,.70);
   margin: 0 auto;
+
 }
 
 /* Animation */
-.typewriter {
+.tulisan1 {
   animation: animated-text 6s steps(29,end) 1s 1 normal both,
              animated-cursor 600ms steps(29,end) infinite;
 }
@@ -221,3 +204,4 @@ a{
   from{border-right-color: rgba(0,255,0,.75);}
   to{border-right-color: transparent;}
 }
+/* Tulisan2 */
